// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled 1`] = `
<li
  aria-disabled={true}
  className="typography primary start singleLineEllipsis smallNormal listItem small disabled"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with empty props 1`] = `
<li
  aria-disabled={false}
  className="typography primary start singleLineEllipsis smallNormal listItem small"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected 1`] = `
<li
  aria-disabled={false}
  aria-selected={true}
  className="typography primary start singleLineEllipsis smallNormal listItem small selected"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected and disabled 1`] = `
<li
  aria-disabled={true}
  aria-selected={true}
  className="typography primary start singleLineEllipsis smallNormal listItem small disabled"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;

exports[`renders correctly with size 1`] = `
<li
  aria-disabled={false}
  className="typography primary start singleLineEllipsis smallNormal listItem large"
  data-testid="list-item"
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  role="option"
  tabIndex={0}
/>
`;
